feat: responsive layout, typography and copy

--- a/index.html
+++ b/index.html
@@ -20,64 +20,46 @@
         <meta property="business:contact_data:postal_code" content="3000">
         <meta property="business:contact_data:country_name" content="Australia">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        
     </head>
     <body>
-        <div class="content-container">
-            <div class="brand">
-                <div id="triangle-a">
-                </div>
-                <div id="triangle-m">
-                </div>
-                <div id="triangle-mm">
-                </div>
-            </div>
-            <div class="h3-dark">
-                <h2>About Us</h2>
-            </div>
-            <div class="content-block">
-                <h3>Adam & Milo partner with small to medium-sized businesses, to build great digital products that solve problems with a face-to-face approach.</h3>
-            </div>
-            <div class="h3-dark">
-                <h2>Our Mantra</h2>
-            </div>
-            <div class="content-block">
-                <h3>A good digital product shouldn't just be a great experience for your customers, but also for you and your team. We create solutions through direct dialogue with you, bringing an idea to life without beauracracies and ceremonies.</h3>
-            </div>
-            <div class="h3-dark">
-                <h2>Our Skillset</h2>
-            </div>
-            <div class="content-block">
-                <h3>
-                    <ul>
-                        <li>Full Stack Development</li>
-                        <li>React Applications</li>
-                        <li>Front and Backend Consulting</li>
-                        <li>Digital Consulting and Strategy</li>
-                        <li>User Experience and Design Thinking</li>
-                        <lI>Accessibility Design</lI>
-                        <li>Responsive Web Design</li>
-                        <li>Content Creation and Copyright</li>
-                    </ul>
-                </h3>
-            </div>
-            <div class="h3 dark">
-                <h2>Our Customers</h2>
-            </div>
-            <div class="content-block">
-                <h3>
-                    <ul>
-                        <li>HOOGA</li>
-                        <li>Hospitality Furniture Concepts</li>
-                        <li>Specifurniture</li>
-                        <li>Thanks Coffee</li>
-                    </ul>
-                </h3>
-            </div>
-        </div>
-        <div class="contact">
-            <a href="mailto:we@workwith.am">Please click here to get in touch!</a>  
-        </div>
+			<header>
+				<div class="logo">
+						<div id="triangle-a">
+						</div>
+						<div id="triangle-m">
+						</div>
+						<div id="triangle-mm">
+						</div>
+				</div>
+			</header>
+			<main>
+				<section class="headline">
+						<h1>Adam & Milo create digital products for small to medium-sized businesses.</h1>
+				</section>
+				<section class="content">
+					<article>
+						<h2>Work with us to: </h2>
+						<ul>
+								<li>plan a <strong>digital strategy</strong> like it's 2020</li>
+								<li>sell goodies on your snazzy <strong>online store</strong></li>
+								<li>create a <strong>online portfolio</strong> that looks and feels like you</li>
+								<li>help customers reach you with a <strong>brochure site</strong></li>
+						</ul>
+						<p>Better yet, surprise us with that crazy idea of yours.</p>
+					</article>
+				</section>
+				<div class="contact">
+					<button href="mailto:we@workwith.am">
+						<strong>Get in touch 👋</strong>
+					</button>  
+				</div>
+			</main>
+			<footer>
+				©2020 Adam & Milo
+			</footer>
     </body>
 </html>
