feat: padding changes, new copy from Sarah

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Adam and Milo</title>
+        <title>Adam & Milo</title>
         <meta name="description" content="">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,16 +45,18 @@
 					<article>
 						<h2>Work with us to: </h2>
 						<ul>
-								<li>plan a <strong>digital strategy</strong> like it's 2020</li>
-								<li>sell goodies on your snazzy <strong>online store</strong></li>
-								<li>create a <strong>online portfolio</strong> that looks and feels like you</li>
-								<li>help customers reach you with a <strong>brochure site</strong></li>
+								<li>implement a <strong>digital strategy</strong> fit for 2020 and beyond</li>
+								<li>sell product on a snazzy new <strong>online store</strong></li>
+								<li>create an <strong>online portfolio</strong> that looks and feels like you</li>
+								<li>help customers reach you with a <strong>brochure site</strong> <br>(like this one!)</li>
+								<li>make your new or exisiting website <strong>accessible for all</strong></li>
 						</ul>
+						<br>
 						<p>Better yet, surprise us with that crazy idea of yours.</p>
 					</article>
 				</section>
 				<div class="contact">
-					<button href="mailto:we@workwith.am">
+					<button href="mailto:we@workwith.am" title="Click here to write us an email">
 						<strong>Get in touch 👋</strong>
 					</button>  
 				</div>
