feat: conflicts resolved

--- a/index.html
+++ b/index.html
@@ -48,17 +48,14 @@
 								<li>implement a <strong>digital strategy</strong> fit for 2020 and beyond</li>
 								<li>sell product on a snazzy new <strong>online store</strong></li>
 								<li>create an <strong>online portfolio</strong> that looks and feels like you</li>
-								<li>help customers reach you with a <strong>brochure site</strong> <br>(like this one!)</li>
-								<li>make your new or exisiting website <strong>accessible for all</strong></li>
+								<li>build a <strong>brochure site</strong> to help customers reach you<br>(like this one!)</li>
+								<li>design your digital products for <strong>accessibility</strong></li>
 						</ul>
-						<br>
-						<p>Better yet, surprise us with that crazy idea of yours.</p>
+						<div class="final-content"><p>Better yet, surprise us with that crazy idea of yours.</p></div>
 					</article>
 				</section>
 				<div class="contact">
-					<button href="mailto:we@workwith.am" title="Click here to write us an email">
-						<strong>Get in touch 👋</strong>
-					</button>  
+					<button onclick="window.location.href='mailto:we@workwith.am'"><strong>Get in touch 👋</strong></button>
 				</div>
 			</main>
 			<footer>
